unpackaged/main/default/objects/User/fields/AgencePF__c.field-meta.xml
<CustomField>
    <fullName>AgencePF__c</fullName>
    <description>Une seule agence PF utilisée pour afficher les missions en cours de cette agence sur Service cloud</description>
    <inlineHelpText>Une seule agence PF utilisée pour afficher les missions en cours de cette agence sur Service cloud</inlineHelpText>
    <label>Agence PF</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>000 - SIEGE</fullName>
            </value>
            <value>
                <fullName>001 - VILLEPINTE</fullName>
            </value>
            <value>
                <fullName>002 - BORDEAUX</fullName>
            </value>
            <value>
                <fullName>003 - ROUEN</fullName>
            </value>
            <value>
                <fullName>004 - RUNGIS</fullName>
            </value>
            <value>
                <fullName>005 - TOULOUSE</fullName>
            </value>
            <value>
                <fullName>006 - NANTES</fullName>
            </value>
            <value>
                <fullName>007 - PAU</fullName>
            </value>
            <value>
                <fullName>008 - DIJON</fullName>
            </value>
            <value>
                <fullName>009 - TOURS</fullName>
            </value>
            <value>
                <fullName>010 - LYON</fullName>
            </value>
            <value>
                <fullName>011 - PLAISIR</fullName>
            </value>
            <value>
                <fullName>012 - CAEN</fullName>
            </value>
            <value>
                <fullName>014 - LILLE</fullName>
            </value>
            <value>
                <fullName>015 - NIORT</fullName>
            </value>
            <value>
                <fullName>016 - NÎMES</fullName>
            </value>
            <value>
                <fullName>017 - ANGERS</fullName>
            </value>
            <value>
                <fullName>018 - METZ</fullName>
            </value>
            <value>
                <fullName>019 - ORLEANS</fullName>
            </value>
            <value>
                <fullName>020 - REIMS</fullName>
            </value>
            <value>
                <fullName>021 - RENNES</fullName>
            </value>
            <value>
                <fullName>022 - CLERMONT-FERRAND</fullName>
            </value>
            <value>
                <fullName>023 - LE HAVRE</fullName>
            </value>
            <value>
                <fullName>024 - MARSEILLE</fullName>
            </value>
            <value>
                <fullName>025 - ANNECY</fullName>
            </value>
            <value>
                <fullName>026 - MULHOUSE</fullName>
            </value>
            <value>
                <fullName>027 - LUXEMBOURG</fullName>
            </value>
            <value>
                <fullName>028 - BEZONS</fullName>
            </value>
            <value>
                <fullName>029 - PERPIGNAN</fullName>
            </value>
            <value>
                <fullName>030 - LIÈGE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>