unpackaged/main/default/objects/User/fields/CarnetCommandeAnnuel__c.field-meta.xml
<CustomField>
    <fullName>CarnetCommandeAnnuel__c</fullName>
    <label>Carnet Commande Annuel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>