unpackaged/main/default/objects/User/fields/Conditions_utilisation_acceptees__c.field-meta.xml
<CustomField>
    <fullName>Conditions_utilisation_acceptees__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True si l&#39;utilisateur a approuvé les conditions d&#39;utilisation du portail client - Community</description>
    <label>Conditions d&#39;utilisation acceptées</label>
    <type>Checkbox</type>
</CustomField>