unpackaged/main/default/objects/User/fields/dfsle__Provisioned__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Provisioned__c</fullName>
    <description>Date when the user was added to the account</description>
    <inlineHelpText>Date provisionnée</inlineHelpText>
    <label>DocuSign Provisioned Date</label>
    <type>Date</type>
</CustomField>