unpackaged/main/default/objects/User/fields/Disable_Notifications_AP07__c.field-meta.xml
<CustomField>
    <fullName>Disable_Notifications_AP07__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Désactiver les notifications de changement de statut d&#39;opps</description>
    <label>Disable Notifications_AP07</label>
    <type>Checkbox</type>
</CustomField>