unpackaged/main/default/objects/User/fields/Fonction__c.field-meta.xml
<CustomField>
    <fullName>Fonction__c</fullName>
    <label>Fonction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Administration des Ventes</fullName>
                <color>#0B6FCE</color>
                <label>Administration des Ventes</label>
            </value>
            <value>
                <fullName>Assistante / commercial GC</fullName>
            </value>
            <value>
                <fullName>Assistante d’Agence</fullName>
                <color>#78C953</color>
                <label>Assistante d’Agence</label>
            </value>
            <value>
                <fullName>Atelier</fullName>
                <color>#0B24BE</color>
                <label>Atelier</label>
            </value>
            <value>
                <fullName>Commercial territorial (CT)</fullName>
                <color>#A845DC</color>
                <label>Commercial territorial (CT)</label>
            </value>
            <value>
                <fullName>Directeur de Site (DS)</fullName>
                <color>#F3D904</color>
                <label>Directeur de Site (DS)</label>
            </value>
            <value>
                <fullName>Directeur Régional des Ventes (DRV)</fullName>
            </value>
            <value>
                <fullName>Direction Commerciale</fullName>
                <color>#A53711</color>
                <label>Direction Commerciale</label>
            </value>
            <value>
                <fullName>Responsable Comptes Clients Régionaux (RCCR)</fullName>
            </value>
            <value>
                <fullName>Service Grands Comptes</fullName>
            </value>
            <value>
                <fullName>Service PARC</fullName>
            </value>
            <value>
                <fullName>Support Technique</fullName>
                <color>#66E9BD</color>
                <label>Support Technique</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>