unpackaged/main/default/objects/User/fields/Invalidated_user__c.field-meta.xml
<CustomField>
    <fullName>Invalidated_user__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GFC-1472</description>
    <label>Invalidated user</label>
    <type>Checkbox</type>
</CustomField>