unpackaged/main/default/objects/User/fields/IsReways__c.field-meta.xml
<CustomField>
    <fullName>IsReways__c</fullName>
    <formula>CONTAINS( UserRole.Name, &#39;Reways&#39;)</formula>
    <label>IsReways</label>
    <type>Checkbox</type>
</CustomField>