unpackaged/main/default/objects/User/fields/LanguageLocaleKeyx__c.field-meta.xml
<CustomField>
    <fullName>LanguageLocaleKeyx__c</fullName>
    <formula>text(LanguageLocaleKey)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LanguageLocaleKeyx</label>
    <type>Text</type>
</CustomField>