unpackaged/main/default/objects/User/fields/Legal_entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_entity__c</fullName>
    <formula>if(  CONTAINS(UserRole.Name,&#39;Stricher&#39;) ,&#39;Stricher&#39;,&#39;Petit Forestier&#39;)</formula>
    <label>Legal entity</label>
    <type>Text</type>
</CustomField>