unpackaged/main/default/objects/User/fields/Liste_Agences__c.field-meta.xml
<CustomField>
    <fullName>Liste_Agences__c</fullName>
    <description>Liste des agences de l&#39;utilisateur séparées par une virgule.
=&gt; Permet de filtrer les enregistrement affichés dans les vues et les rapports.</description>
    <inlineHelpText>Renseigner les agences de l&#39;utilisateur séparées de virgule pour filtrer les vues et les rapports.</inlineHelpText>
    <label>Liste Agences</label>
    <type>TextArea</type>
</CustomField>