unpackaged/main/default/objects/User/fields/Listes_Agences__c.field-meta.xml
<CustomField>
    <fullName>Listes_Agences__c</fullName>
    <label>Listes Agences</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>