unpackaged/main/default/objects/User/fields/MigrationRF__c.field-meta.xml
<CustomField>
    <fullName>MigrationRF__c</fullName>
    <externalId>true</externalId>
    <label>MigrationRF</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>