unpackaged/main/default/objects/User/fields/Nb_Contrats_NCT__c.field-meta.xml
<CustomField>
    <fullName>Nb_Contrats_NCT__c</fullName>
    <label>Nb Contrats NCT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>