unpackaged/main/default/objects/User/fields/Nb_Contrats_SUP__c.field-meta.xml
<CustomField>
    <fullName>Nb_Contrats_SUP__c</fullName>
    <label>Nb Contrats SUP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>