unpackaged/main/default/objects/User/fields/NbContratsContainers__c.field-meta.xml
<CustomField>
    <fullName>NbContratsContainers__c</fullName>
    <label>Nb Contrats (Containers)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>