unpackaged/main/default/objects/User/fields/NbContratsContainersNm1__c.field-meta.xml
<CustomField>
    <fullName>NbContratsContainersNm1__c</fullName>
    <label>Nb Contrats (Containers) (N-1)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>