unpackaged/main/default/objects/User/fields/NbContratsMeubles__c.field-meta.xml
<CustomField>
    <fullName>NbContratsMeubles__c</fullName>
    <label>Nb Contrats (Meubles)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>