unpackaged/main/default/objects/User/fields/NbContratsMeublesNm1__c.field-meta.xml
<CustomField>
    <fullName>NbContratsMeublesNm1__c</fullName>
    <label>Nb Contrats (Meubles) (N-1)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>