unpackaged/main/default/objects/User/fields/NbContratsNCTSUP__c.field-meta.xml
<CustomField>
    <fullName>NbContratsNCTSUP__c</fullName>
    <label>Nb Contracts NCT + SUP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>