unpackaged/main/default/objects/User/fields/NbContratsNCTSUPNm1__c.field-meta.xml
<CustomField>
    <fullName>NbContratsNCTSUPNm1__c</fullName>
    <label>Nb Contrats NCT / SUP (N-1)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>