unpackaged/main/default/objects/User/fields/NbContratsPRG__c.field-meta.xml
<CustomField>
    <fullName>NbContratsPRG__c</fullName>
    <label>Nb Contrats PRG</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>