unpackaged/main/default/objects/User/fields/NbContratsPRGNm1__c.field-meta.xml
<CustomField>
    <fullName>NbContratsPRGNm1__c</fullName>
    <label>Nb Contrats PRG (N-1)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>