unpackaged/main/default/objects/User/fields/NbContratsRNV__c.field-meta.xml
<CustomField>
    <fullName>NbContratsRNV__c</fullName>
    <label>Nb Contrats RNV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>