unpackaged/main/default/objects/User/fields/NbContratsRNVNm1__c.field-meta.xml
<CustomField>
    <fullName>NbContratsRNVNm1__c</fullName>
    <label>Nb Contrats RNV (N-1)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>