unpackaged/main/default/objects/User/fields/NbEvenements__c.field-meta.xml
<CustomField>
    <fullName>NbEvenements__c</fullName>
    <label>Nb Evénements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>