unpackaged/main/default/objects/User/fields/NCT_Target_MIN__c.field-meta.xml
<CustomField>
    <fullName>NCT_Target_MIN__c</fullName>
    <label>NCT Target MIN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>