unpackaged/main/default/objects/User/fields/PF_BL__c.field-meta.xml
<CustomField>
    <fullName>PF_BL__c</fullName>
    <label>PF BL</label>
    <length>35</length>
    <type>Text</type>
</CustomField>