unpackaged/main/default/objects/User/fields/PF_Territoire__c.field-meta.xml
<CustomField>
    <fullName>PF_Territoire__c</fullName>
    <label>PF Territoire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>