unpackaged/main/default/objects/User/fields/Popup_confirmation__c.field-meta.xml
<CustomField>
    <fullName>Popup_confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Popup confirmation</label>
    <type>Checkbox</type>
</CustomField>