unpackaged/main/default/objects/User/fields/qualtrics__QualtricsURL__c.field-meta.xml
<CustomField>
    <fullName>qualtrics__QualtricsURL__c</fullName>
    <description>Optional url to the Qualtrics system.  A default url will be used if this is not specified.</description>
    <label>QualtricsURL</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>