unpackaged/main/default/objects/User/fields/SBQQ__DiagnosticToolEnabled__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__DiagnosticToolEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable to run pricing diagnostics during a Quote Line Editor Calculate.</description>
    <inlineHelpText>Permet d&#39;activer l&#39;outil de diagnostic de CPQ, disponible uniquement si le paramètre de l&#39;organisation est activé. Pour activer cette capacité, contactez le support.</inlineHelpText>
    <label>Enable Diagnostic Tool</label>
    <type>Checkbox</type>
</CustomField>