unpackaged/main/default/objects/User/fields/SBQQ__OutputFormatChangeAllowed__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__OutputFormatChangeAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag that indicates whether this user is allowed to change output format of quote documents.</description>
    <inlineHelpText>Sélectionnez cette case pour autoriser cet utilisateur à changer le format de sortie des documents de devis.</inlineHelpText>
    <label>Allow Output Format Change</label>
    <type>Checkbox</type>
</CustomField>