unpackaged/main/default/objects/User/fields/SBQQ__ProductSortPreference__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ProductSortPreference__c</fullName>
    <description>Product sort preference for this user. Currently only Chatter Follows are supported.</description>
    <inlineHelpText>Sélectionnez « Suivi » pour afficher les produits que vous suivez dans Chatter avant d&#39;autres lors de l&#39;ajout à un devis.</inlineHelpText>
    <label>Product Sort Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Followed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>