unpackaged/main/default/objects/User/fields/SBQQ__ResetProductLookup__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ResetProductLookup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag that determines whether Product Lookup data (guided selling questions, search filters and search results) are cleared after user selects desired products.</description>
    <inlineHelpText>Sélectionnez cette case pour effacer les filtres et les résultats de recherche chaque fois que vous ajoutez des produits à vos devis, sinon vos sélections antérieures sont conservées.</inlineHelpText>
    <label>Reset Product Lookup</label>
    <type>Checkbox</type>
</CustomField>