unpackaged/main/default/objects/User/fields/SUP_Target_MAX__c.field-meta.xml
<CustomField>
    <fullName>SUP_Target_MAX__c</fullName>
    <label>SUP Target MAX</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>