unpackaged/main/default/objects/User/fields/TECH_TODAY__c.field-meta.xml
<CustomField>
    <fullName>TECH_TODAY__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH TODAY</label>
    <type>Checkbox</type>
</CustomField>