unpackaged/main/default/objects/User/fields/TECH_UserSuperiors__c.field-meta.xml
<CustomField>
    <fullName>TECH_UserSuperiors__c</fullName>
    <label>TECH UserSuperiors</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>