unpackaged/main/default/objects/User/fields/TECHChatterNotif__c.field-meta.xml
<CustomField>
    <fullName>TECHChatterNotif__c</fullName>
    <label>TECHChatterNotif</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>