unpackaged/main/default/objects/User/fields/USER_ID__c.field-meta.xml
<CustomField>
    <fullName>USER_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>USER ID</label>
    <type>Text</type>
</CustomField>