unpackaged/main/default/objects/User/fields/WFC_Pilote__c.field-meta.xml
<CustomField>
    <fullName>WFC_Pilote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WFC Pilote</label>
    <type>Checkbox</type>
</CustomField>