unpackaged/main/default/objects/User/listViews/Actifs_PIBE.listView-meta.xml
<ListView>
    <fullName>Actifs_PIBE</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>IS_FROZEN</columns>
    <columns>AgencePFMulti__c</columns>
    <columns>Fonction__c</columns>
    <columns>PF_Pays__c</columns>
    <columns>PF_Region__c</columns>
    <columns>AgencePF__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>contains</operation>
        <value>PIAT,PIBE,PIDE,PILU,PIND</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Actifs CNE</label>
    <language>fr</language>
</ListView>