unpackaged/main/default/objects/User/listViews/Techniciens_FIELD_SERVICE.listView-meta.xml
<ListView>
    <fullName>Techniciens_FIELD_SERVICE</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>CREATED_DATE</columns>
    <columns>USER_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>startsWith</operation>
        <value>201</value>
    </filters>
    <label>Techniciens FIELD SERVICE</label>
    <language>fr</language>
</ListView>